--- a/FractalProject/.classpath
+++ b/FractalProject/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="tests"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/USER/Desktop/University Assignments/CSE116 Introduction to Computer Science II/FractalPanel.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
